--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -1,6 +1,6 @@
 {% load staticfiles %}
 <div class="showcase text-center">
-  <div class="wrapper clearfix text-center">
+  <div class="wrapper clearfix text-center body-text">
    <h4>THE TEAM</h4>
    <!--start a first card group-->
   <div class="row pl-5 pr-5">
@@ -8,20 +8,27 @@
     <div class="team card text-center p-0">
       <div class="card-body">
         <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" >
+        <p>Philip Ahereza </p>
+        <p class="pt-0 small">Technologist/Software developer</p>
       </div>
     </div>
   </div>
   <div class="col-4">
-    <div class="team card text-center p-0">
+    <div class="team card text-center p-0 ">
       <div class="card-body">
         <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}">
+        <p>Eric Mugendi</p>
+        <p class="pt-0 small">Managing Editor at PesaCheck</p>
       </div>
+
     </div>
   </div>
   <div class="col-4">
     <div class="team card text-center p-0">
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/nduta.png' %}">
+        <p>Nduta Waweru</p>
+        <p class="pt-0 small"></p>
       </div>
     </div>
   </div>
@@ -32,6 +39,8 @@
     <div class="team card text-center p-0">
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}">
+        <p>Yazmin Jumali</p>
+        <p class="pt-0 small">Project Manager</p>
       </div>
     </div>
   </div>
@@ -40,6 +49,8 @@
     <div class="team card text-center p-0">
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/brenda.jpeg' %}">
+        <p>Brenda Nyokabi</p>
+        <p class="pt-0 small">Front-end developer</p>
       </div>
     </div>
   </div>
