--- a/wajibisha/templates/homepage_country.html
+++ b/wajibisha/templates/homepage_country.html
@@ -15,14 +15,13 @@
     <div class="wrapper content-container">
       <div class="column-third text-left">
         <h2>WAJIBISHA</h2>
-        <p style="color:#b7e4ff;font-size:1.2rem;">Keep track of your county's
+        <p class="sub-title">Keep track of your county's
           <span class="yellow-text">promises</span></p>
         <div class="colum-third pt-3">
           <select class=" country form-control form-control-lg"
-                  style="width: 200px;font-size:1rem;background-color:#4CAE4E;border-color: #4CAE4E;"
                   id="county_select" onchange="selectCounty()">
             <option value="default" disabled selected>SELECT A COUNTY</option>
-            <option value="nairobi" style="background-color:#4CAE4E;">Nairobi
+            <option value="nairobi">Nairobi
             </option>
 
           </select>
@@ -43,7 +42,7 @@
       <h4>SOME OF THE PROMISES WE ARE TRACKING</h4>
       <br/>
       <!--Start of cards-->
-      <div class="card-group" style="height:600px;">
+      <div class="main-card card-group" >
         <div class="card p-0 m-3 body-text" style="height:450px;">
           <div class="pt-4">
             <img class="card-img-top rounded mx-auto d-block" src="{% static 'img/tracker/category/housing.svg' %}" alt="Card image cap"></div>
