--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -28,7 +28,7 @@
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/nduta.png' %}">
         <p>Nduta Waweru</p>
-        <p class="pt-0 small"></p>
+        <p class="pt-0 small">Editor wajibisha</p>
       </div>
     </div>
   </div>
