Fixed table width

--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -76,7 +76,8 @@
 
       function getPromiseHTML(promise) {
           var html = "<div class=\"col-6 pt-5 pr-5 pl-5\">\n" +
-              "            <table class=\"table table-bordered bg-light promise-item\">\n" +
+              "            <table class=\"table table-bordered bg-light promise-item\"\n" +
+              "              style=\"table-layout:fixed;\">\n" +
               "              <tbody>\n" +
               "              <tr>\n" +
               "                <td class=\"table-width\">\n" +
