--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -122,7 +122,7 @@
               "\n" +
               "              <tr>\n" +
               "                <td><p\n" +
-              "                    class=\"font-weight-normal text-center\">" + promise.status.toUpperCase();
+              "                    class=\"m-0 pb-3 pt-3 font-weight-normal text-center\">" + promise.status.toUpperCase();
 
           html += "</p>\n" +
               "                </td>\n" +
