--- a/wajibisha/templates/blocks/mission.html
+++ b/wajibisha/templates/blocks/mission.html
@@ -5,7 +5,8 @@
       <h2>OUR MISSION</h2>
     </div>
     <div class="column-half objective">
-      <i>Wajibisha</i> seeks to provide an easy way to use online solutions for tracking
+      <i>Wajibisha</i> seeks to provide an easy way to use online solutions for
+      tracking
       county development promises using data obtained from campaign manifestos
     </div>
     <div class="column-quarter pie-chart">
