--- a/wajibisha/templates/profile/_blocks/promises_by_status.html
+++ b/wajibisha/templates/profile/_blocks/promises_by_status.html
@@ -1,25 +1,27 @@
-{% load wajibisha_tags staticfiles%}
+{% load wajibisha_tags staticfiles %}
 <div class="col-6">
   <div class="card p-0 pull-left" style="height:200px;width:400px;">
     <div class="d-flex flex-row" style='height:150px;'>
       <div class="justify-content-left">
         <img class="card-img p-0"
-             {% if status == 'done' %}
-               src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}"
-             {% elif status == 'not done'%}
-                src="{% static 'img/tracker/status/unfulfilled-portrait.svg' %}"
-             {% elif status == 'in progress'%}
-                src="{% static 'img/tracker/status/in-progress-portrait.svg' %}"
-             {% elif status == "stalled"%}
-                src="{% static 'img/tracker/status/stalled-portrait.svg' %}"
-             {% endif %}
+            {% if status == 'done' %}
+             src="{% static 'img/tracker/status/fulfilled-portrait.svg' %}"
+            {% elif status == 'not done' %}
+             src="{% static 'img/tracker/status/unfulfilled-portrait.svg' %}"
+            {% elif status == 'in progress' %}
+             src="{% static 'img/tracker/status/in-progress-portrait.svg' %}"
+            {% elif status == "stalled" %}
+             src="{% static 'img/tracker/status/stalled-portrait.svg' %}"
+            {% endif %}
 
              style="height:150px;width:180px;margin-top:-3rem;padding-left:0;">
       </div>
       <div class="justify-content-right pt-3">
-        <p class="lead pr-5"><b class="text-large">{% value_or_zero value %} </b><span
+        <p class="lead pr-5"><b
+            class="text-large">{% value_or_zero value %} </b><span
             style="font-size:14px;"> Promises</span></p>
-        <p class="lead pt-0 pr-4"><b style="font-size:28px;">{% get_percentage value total %} </b><span
+        <p class="lead pt-0 pr-4"><b
+            style="font-size:28px;">{% get_percentage value total %} </b><span
             style="font-size:14px;"> Complete</span></p>
       </div>
     </div>
