--- a/wajibisha/templates/about.html
+++ b/wajibisha/templates/about.html
@@ -2,37 +2,63 @@
 
 {% block body_id %}page{% endblock %}
 {% block header_content %}
-<div class="clipped-header clearfix">
+  <div class="clipped-header clearfix">
     <div class="wrapper content-container">
       <div class="column-third text-left">
-          <h2>About</h2>
+        <h2>About</h2>
       </div>
       <div class="column-third"></div>
       <div class="column-third push-right">
-          <img src="{% static 'img/about/team.svg' %}" class="presentation-img">
-      </div>
-  </div>
-</div>
-{% endblock header_content %}
-{% block content_container %}
-<div class="showcase how-it-works text-center">
-    {% block about %}
-    <div class="body-text wrapper clearfix text-center pl-5 pr-5">
-        <h2>WHO WE ARE</h2>
-        <br/>
-        <p>Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata
-          usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque
-          mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu.<br>
-          Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei.<br>
-          No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at
-          vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus argumentum ne qui tation efficiendi in eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus</p>
-          
+        <img src="{% static 'img/about/team.svg' %}" class="presentation-img">
       </div>
     </div>
-    {% include 'blocks/team.html' %}
+  </div>
+{% endblock header_content %}
+{% block content_container %}
+  <div class="showcase how-it-works text-center">
+    {% block about %}
+      <div class="body-text wrapper clearfix text-center pl-5 pr-5">
+        <h2>WHO WE ARE</h2>
+        <br/>
+        <p>Lorem ipsum dolor sit amet et delectus accommodare his consul
+          copiosae legendos at vix ad putent delectus delicata
+          usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos
+          erant dolorum an. Per facer affert ut. Mei iisque
+          mentitum moderatius cu. Sit munere facilis accusam eu dicat falli
+          consulatu at vis. Te facilisis mnesarchum qui posse omnium
+          mediocritatem est cu. Modus argumentum ne qui tation efficiendi in
+          eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No
+          deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus
+          accommodare his consul copiosae legendos at vix ad putent delectus
+          delicata usu.<br>
+          Vidit dissentiet eos cu eum an brute copiosae hendrerit. Eos erant
+          dolorum an. Per facer affert ut. Mei iisque mentitum moderatius cu.
+          Sit munere facilis accusam eu dicat falli consulatu at vis. Te
+          facilisis mnesarchum qui posse omnium mediocritatem est cu. Modus
+          argumentum ne qui tation efficiendi in eos. Ei mea falli legere
+          efficiantur et tollit aliquip debitis mei.<br>
+          No deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus
+          accommodare his consul copiosae legendos at
+          vix ad putent delectus delicata usu. Vidit dissentiet eos cu eum an
+          brute copiosae hendrerit. Eos erant dolorum an. Per facer affert ut.
+          Mei iisque mentitum moderatius cu. Sit munere facilis accusam eu dicat
+          falli consulatu at vis. Te facilisis mnesarchum qui posse omnium
+          mediocritatem est cu. Modus argumentum ne qui tation efficiendi in
+          eos. Ei mea falli legere efficiantur et tollit aliquip debitis mei. No
+          deserunt mediocritatem mel. Lorem ipsum dolor sit amet et delectus
+          accommodare his consul copiosae legendos at vix ad putent delectus
+          delicata usu. Vidit dissentiet eos cu eum an brute copiosae hendrerit.
+          Eos erant dolorum an. Per facer affert ut. Mei iisque mentitum
+          moderatius cu. Sit munere facilis accusam eu dicat falli consulatu at
+          vis. Te facilisis mnesarchum qui posse omnium mediocritatem est cu.
+          Modus</p>
+
+      </div>
+      </div>
+      {% include 'blocks/team.html' %}
 
     {% endblock %}
-</div>
+  </div>
 {% endblock %}
 
 
