--- a/wajibisha/templates/blocks/team.html
+++ b/wajibisha/templates/blocks/team.html
@@ -9,7 +9,8 @@
       <div class="card-body">
         <img class="rounded-circle" src="{% static 'img/team/ahereza.jpeg' %}" >
         <p>Philip Ahereza </p>
-        <p class="pt-0 small">Technologist/Software developer</p>
+        <p class="pt-0 small">CfA, Software Developer</p>
+        <p class="pt-0 small">Technologist/Backend developer</p>
       </div>
     </div>
   </div>
@@ -18,7 +19,8 @@
       <div class="card-body">
         <img class="rounded-circle" src="{% static 'img/team/mugendi.jpg' %}">
         <p>Eric Mugendi</p>
-        <p class="pt-0 small">Managing Editor at PesaCheck</p>
+        <p class="pt-0 small">Editor, PesaCheck</p>
+        <p class="pt-0 small">Editorial/Tech/Design team liaison</p>
       </div>
 
     </div>
@@ -28,7 +30,8 @@
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/nduta.png' %}">
         <p>Nduta Waweru</p>
-        <p class="pt-0 small">Associate Editor, Face2Face Africa</p>
+          <p class="pt-0 small">Journalist, Wajibisha team lead</p>
+        <p class="pt-0 small">Project manager and editorial lead</p>
       </div>
     </div>
   </div>
@@ -40,7 +43,8 @@
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/yazmin.jpeg' %}">
         <p>Yazmin Jumali</p>
-        <p class="pt-0 small">Project Manager</p>
+        <p class="pt-0 small">CfA, Tech Team Project Manager</p>
+        <p class="pt-0 small">Project team/Tech team liaison</p>
       </div>
     </div>
   </div>
@@ -50,7 +54,18 @@
       <div class="card-body">
         <img class="img-team rounded-circle" src="{% static 'img/team/brenda.jpeg' %}">
         <p>Brenda Nyokabi</p>
+        <p class="pt-0 small">CfA, Software Developer</p>
         <p class="pt-0 small">Front-end developer</p>
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class="team card text-center p-0">
+      <div class="card-body">
+        <img class="img-team rounded-circle" src="{% static 'img/team/larry.jpg' %}">
+        <p>Larry Wachira</p>
+        <p class="pt-0 small">UX/UI designer</p>
+        <p class="pt-0 small">Wireframe and proof-of-concept designer</p>
       </div>
     </div>
   </div>
