--- a/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/profile/profile_detail.html
@@ -324,14 +324,14 @@
               data-chart-title="Schools by region status"></div>
           </div>
         </section>
-        <!-- <section class="clearfix stat-row">
+        <section class="clearfix stat-row">
           <div class="column-third">
             <div id="chart-bar-schools-category_distribution" data-stat-type="scaled-percentage" data-chart-title="School Has Equal or More Than 40 Students?"></div>
           </div>
           <div class="column-third">
-            <div id="chart-bar-schools-gpa_group_distribution" data-stat-type="number" data-chart-title="School Has Equal or More Than 40 Students?"></div>
+            <div id="chart-pie-schools-gender_distribution" data-stat-type="scaled-percentage" data-chart-title="Gender of Schools"></div>
           </div>
-        </section> -->
+        </section>
     </div>
 </article>
 
