university finder fixes

--- a/elimu_yangu/templates/homepage_country.html
+++ b/elimu_yangu/templates/homepage_country.html
@@ -14,8 +14,8 @@
 <link rel="stylesheet" href="{% static 'css/step.css' %}" />
 <link rel="stylesheet" href="{% static 'css/arrow.css' %}" />
     <!-- OWL CAROSEL CSS -->
-<link rel="stylesheet" href="{% static 'lib/owlcarousel/css/owl.carousel.css' %}">
-<link rel="stylesheet" href="{% static 'lib/owlcarousel/css/owl.theme.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'lib/owlcarousel/css/owl.carousel.css' %}">
+<link rel="stylesheet" href="{% static 'lib/owlcarousel/css/owl.theme.css' %}"> -->
    <!-- Jquery nice select -->
 <link rel="stylesheet" href="{% static 'lib/jquery.nice-select/css/nice-select.css' %}">
 
