--- a/wajibisha/templates/blocks/tweets.html
+++ b/wajibisha/templates/blocks/tweets.html
@@ -2,63 +2,31 @@
 <section class="tweet-section">
   <div class=" container pb-5 pt-5">
     <div class="pt-0 d-flex justify-content-center body-text">
-      <h3>Latest tweets<h3>
+      <h3>Latest tweets</h3>
     </div>
     <div class="row">
       <div class="card-group pb-2 body-text">
-        <div class="tweet-card card border rounded">
+        {% for tweet in tweets %}
+          <div class="tweet-card card border rounded">
           <div class="d-flex flex-row">
             <div class="pl-2 pt-4"><img class="rounded-circle"
-                                        src="http://via.placeholder.com/70x70"
-                                        alt="Placeholder"></div>
+                                        src="{{ tweet.profile_image_url }}"
+                                        alt="Placeholder" height="70" width="70"></div>
             <div class="pl-3 pr-2 pt-4">
-              <p>Wajibisha Tracker @wajibisha</p>
-              <p class="pr-4">Sonko does something huuugeee...</p>
+              <p>{{ tweet.name }}@{{ tweet.screen_name }}</p>
+              <p class="pr-4">{{ tweet.text | urlize }}</p>
               <p class="text-right pr-2 pt-3">
                 <span><i class="fa fa-retweet fa-lg ml-3"
-                         aria-hidden="true"></i></span>
+                         aria-hidden="true">{{ tweet.retweet_count }}</i></span>
                 <span><i class="fa fa-heart-o fa-lg ml-3"
-                         aria-hidden="true"></i></span>
+                         aria-hidden="true">{{ tweet.favorite_count }}</i></span>
               </p>
             </div>
           </div>
         </div>
-        <div class="tweet-card card border rounded">
-          <div class="d-flex flex-row">
-            <div class="pl-2 pt-4"><img class="rounded-circle"
-                                        src="http://via.placeholder.com/70x70"
-                                        alt="Placeholder"></div>
-            <div class="pl-3 pr-2 pt-3 pt-4">
-              <p>Wajibisha Tracker @wajibisha</p>
-              <p class="pr-4">Sonko does something huuugeee....</p>
-              <p class="text-right pr-2 pt-3">
-                <span><i class="fa fa-retweet fa-lg ml-3"
-                         aria-hidden="true"></i></span>
-                <span><i class="fa fa-heart-o fa-lg ml-3"
-                         aria-hidden="true"></i></span>
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="tweet-card card border rounded">
-          <div class="d-flex flex-row">
-            <div class="pl-2 pt-4"><img class="rounded-circle"
-                                        src="http://via.placeholder.com/70x70"
-                                        alt="Placeholder"></div>
-            <div class="pl-3 pr-2 pt-4">
-              <p>Wajibisha Tracker @wajibisha</p>
-              <p class="pr-4">Sonko does something huuugeee....</p>
-              <p class="text-right pr-2 pt-3">
-                <span><i class="fa fa-retweet fa-lg ml-3"
-                         aria-hidden="true"></i></span>
-                <span><i class="fa fa-heart-o fa-lg ml-3"
-                         aria-hidden="true"></i></span>
-              </p>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
+
       </div>
     </div>
-  </div>
   </div>
 </section>
