--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -7,12 +7,12 @@
           <p><strong>Wajibisha</strong> tracks the progress on delivery of
             electrol promises by kenya's governors.</p>
           <p>It helps citizens better understand how far along these promises
-            are in terms of implemetation</p>
+            are in terms of implemetation.</p>
           <p>
             This site is a <strong>PesaCheck</strong> project implemented by
-            <strong>Code for Africa. </strong> All content is released under a
-            <u>creative commons 4 Attribution license.</u> Reuse it to help
-            empower your own comunity. The code is available on <strong><u>GitHub</u></strong>
+            <strong>Code for Africa.&nbsp</strong> All content is released under a
+            <u>creative commons 4 Attribution license.&nbsp</u> Reuse it to help
+            empower your own comunity.&nbspThe code is available on <strong><u>GitHub</u></strong>
             and data is available on <u>openAfrica.</u>
           </p>
         </div>
