--- a/wajibisha/templates/_footer.html
+++ b/wajibisha/templates/_footer.html
@@ -10,7 +10,8 @@
             are in terms of implemetation.</p>
           <p>
             This site is a <strong>PesaCheck</strong> project implemented by
-            <strong>Code for Africa.&nbsp</strong> All content is released under a
+            <strong>Code for Africa.&nbsp</strong> All content is released under
+            a
             <u>creative commons 4 Attribution license.&nbsp</u> Reuse it to help
             empower your own comunity.&nbspThe code is available on <strong><u>GitHub</u></strong>
             and data is available on <u>openAfrica.</u>
@@ -83,12 +84,8 @@
             Phone: +254 727 588456<br>
             Email: hello@pesacheck.org
           </p>
-          </p>
         </div>
       </div>
-    </div>
-    </div>
-    </div>
     </div>
   </footer>
 {% endblock %}
