--- a/wajibisha/templates/blocks/filter_promises.html
+++ b/wajibisha/templates/blocks/filter_promises.html
@@ -1,29 +1,33 @@
 {% load sass_tags staticfiles %}
 <div class="">
   <div class="showcase how-it-works text-center body-text">
-      <div class="d-flex flex-row justify-content-center">
-        <div class="row d-flex flex-row justify-content-end pb-5 ">
-          <p class="small pt-2 pb-3">Filter by:</p>
-            <div class="pl-3 dropdown">
-              <select class="form-control promise-select dropdown-toggle" data-style="btn-primary" id="status_select" onchange="filter()">
-                <option value="all" class="dropdown-menu">Status</option>
-                {% for status in statuses %}
-                <option class="dropdown-item" value="{{ status | safe }}">{{ status }}</option>
-                {% endfor %}
-              </select>
-            </div>
-            <div class="dropdown pl-3">
-              <select class="form-control promise-select" id="sector_select" onchange="filter()">
-                <option class="dropdown-menu" value="all">Sector</option>
-                {% for sector in sectors %}
-                <option value="{{ sector | safe }}">{{ sector }}</option>
-                {% endfor %}
-
-              </select>
-            </div>
-
-          </div>
+    <div class="d-flex flex-row justify-content-center">
+      <div class="row d-flex flex-row justify-content-end pb-5 ">
+        <p class="small pt-2 pb-3">Filter by:</p>
+        <div class="pl-3 dropdown">
+          <select class="form-control promise-select dropdown-toggle"
+                  data-style="btn-primary" id="status_select"
+                  onchange="filter()">
+            <option value="all" class="dropdown-menu">Status</option>
+            {% for status in statuses %}
+              <option class="dropdown-item"
+                      value="{{ status | safe }}">{{ status }}</option>
+            {% endfor %}
+          </select>
         </div>
+        <div class="dropdown pl-3">
+          <select class="form-control promise-select" id="sector_select"
+                  onchange="filter()">
+            <option class="dropdown-menu" value="all">Sector</option>
+            {% for sector in sectors %}
+              <option value="{{ sector | safe }}">{{ sector }}</option>
+            {% endfor %}
+
+          </select>
+        </div>
+
+      </div>
+    </div>
 
     <!--fulfilled card section-->
     <div class="container pt-5">
