--- a/wajibisha/templates/profile/_blocks/_promise_card.html
+++ b/wajibisha/templates/profile/_blocks/_promise_card.html
@@ -21,9 +21,11 @@
           margin-left:-10px;border-color:rgba(112, 112, 112, 0.2);">
     <div class="d-flex flex-row">
       <div class="justify-content-start" style="font-weight:300;">
-        <p class="pl-4 pt-3" style="font-size:larger;"><b>{{ stat.done }}</b></p>
+        <p class="pl-4 pt-3" style="font-size:larger;"><b>{{ stat.done }}</b>
+        </p>
         <p class="pl-4 pt-2 ml-5">Fulfilled</p>
-        <p class="pl-4 pt-3" style="font-size:larger;"><b>{{ stat.in_progress }}</b></p>
+        <p class="pl-4 pt-3" style="font-size:larger;">
+          <b>{{ stat.in_progress }}</b></p>
         <p class="pl-4 ml-5 pt-0">In Progress</p>
       </div>
       <div class="justify-content-end offset-1"
@@ -37,7 +39,10 @@
   </div>
 
   <div class="d-flex flex-row pb-3 pt-3 pl-5">
-    <a  href="https://twitter.com/pesacheck" class="pt-0 mr-auto content-align-center pl-4 body-text small" style="text-decoration:none;"><i class="fa fa-twitter fa-sm fa-share-alt pl-5 pr-1"></i>Share</a>
+    <a href="https://twitter.com/pesacheck"
+       class="pt-0 mr-auto content-align-center pl-4 body-text small"
+       style="text-decoration:none;"><i
+        class="fa fa-twitter fa-sm fa-share-alt pl-5 pr-1"></i>Share</a>
 
   </div>
 </div>
