--- a/elimu_yangu/leaguetable/templates/leaguetable/homepage.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/homepage.html
@@ -80,7 +80,17 @@
                                       <a href="/leaguetable/schools/{{ school.code }}">
                                           <div class="col-xs-5">
                                               <div class="school-name">{{ school.name | title }} School</div>
-                                              <div class="school-type">{{ school.gender | title }}</div>
+                                              <div class="school-type">
+                                                {% if school.gender == "Boys" %}
+                                                    {%trans 'Boys' %}
+                                                {% else %}
+                                                  {% if school.gender == 'Mixed'%}
+                                                    {%trans 'Mixed' %}
+                                                  {% else %}
+                                                    {%trans 'Girls' %}
+                                                  {% endif %}
+                                                {% endif %}
+                                              </div>
                                           </div>
                                           <div class="col-xs-5">
                                               <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
@@ -112,7 +122,17 @@
                                       <a href="/leaguetable/schools/{{ school.code }}">
                                           <div class="col-xs-5">
                                               <div class="school-name">{{ school.name | title }} School</div>
-                                              <div class="school-type">{{ school.gender | title }}</div>
+                                              <div class="school-type">
+                                                {% if school.gender == "Boys" %}
+                                                    {%trans 'Boys' %}
+                                                {% else %}
+                                                  {% if school.gender == 'Mixed'%}
+                                                    {%trans 'Mixed' %}
+                                                  {% else %}
+                                                    {%trans 'Girls' %}
+                                                  {% endif %}
+                                                {% endif %}
+                                              </div>
                                           </div>
                                           <div class="col-xs-5">
                                               <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
@@ -140,7 +160,17 @@
                                       <a href="/leaguetable/schools/{{ school.code }}">
                                           <div class="col-xs-5">
                                               <div class="school-name">{{ school.name | title }} School</div>
-                                              <div class="school-type">{{ school.gender | title }}</div>
+                                              <div class="school-type">
+                                                {% if school.gender == "Boys" %}
+                                                    {%trans 'Boys' %}
+                                                {% else %}
+                                                  {% if school.gender == 'Mixed'%}
+                                                    {%trans 'Mixed' %}
+                                                  {% else %}
+                                                    {%trans 'Girls' %}
+                                                  {% endif %}
+                                                {% endif %}
+                                              </div>
                                           </div>
                                           <div class="col-xs-5">
                                               <div class="school-rank">#{{ school.national_rank_all }} {%trans 'in' %} Tanzania</div>
