add countries homepage templates extending hurumap homepage template

--- a/elimu_yangu/leaguetable/templates/leaguetable/homepage.html
+++ b/elimu_yangu/leaguetable/templates/leaguetable/homepage.html
@@ -1,4 +1,4 @@
-{% extends 'homepage_country.html' %}{% load i18n %}{% load humanize partition staticfiles %}
+{% extends 'homepage.html' %}{% load i18n %}{% load humanize partition staticfiles %}
 
 {% block head_title %}School League : School{% endblock %}
 
