--- a/pesayetu/templates/homepage.html
+++ b/pesayetu/templates/homepage.html
@@ -1,2 +1,1 @@
-{% extends 'homepage_country.html' %}{% load humanize partition staticfiles %}
-
+{% extends 'homepage.html' %}{% load humanize partition staticfiles %}
